Fix screen formatting and auto collapse sidebar menu

--- a/src/app/layout/private/private.component.css
+++ b/src/app/layout/private/private.component.css
@@ -21,6 +21,7 @@
   background-color: #EEE;
   bottom: 0;
   height: 100%;
+  overflow: auto;
   position: fixed;
   width: 275px;
 }
